--- a/.github/workflows/ci-pr-gate.yml
+++ b/.github/workflows/ci-pr-gate.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Resolve Tooling
-        shell: pwsh
+        shell: powershell
         run: |
           $cmakeCmd = Get-Command cmake -ErrorAction SilentlyContinue
           if ($cmakeCmd) {
@@ -37,15 +37,15 @@ jobs:
           }
 
       - name: Configure
-        shell: pwsh
+        shell: powershell
         run: '& "$env:CMAKE_BIN" -S . -B build -G "Visual Studio 17 2022" -A x64'
 
       - name: Build Release
-        shell: pwsh
+        shell: powershell
         run: '& "$env:CMAKE_BIN" --build build --config Release'
 
       - name: Run Unit Tests
-        shell: pwsh
+        shell: powershell
         run: |
           .\build\Release\AutoLifeExecutionStateTest.exe
           .\build\Release\AutoLifeTest.exe
@@ -53,14 +53,14 @@ jobs:
           .\build\Release\AutoLifeEventJournalTest.exe
 
       - name: Run Operational Gate (PR profile)
-        shell: pwsh
+        shell: powershell
         run: |
           powershell -NoProfile -ExecutionPolicy Bypass -File scripts\run_ci_operational_gate.ps1 -IncludeBacktest
 
       - name: Generate Profitability Exploratory Report (Non-blocking)
         if: always()
         continue-on-error: true
-        shell: pwsh
+        shell: powershell
         run: |
           powershell -NoProfile -ExecutionPolicy Bypass -File scripts\run_profitability_exploratory.ps1
 
