Fix CI checkout build: track core state store/journal sources

--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ config/*secret*.json
 config/*private*.json
 
 # ===== Runtime State & Temp (Stage 12) =====
-state/
+/state/
 runtime/
 tmp/
 *.pid
