Stage 15: backtest entry-density tuning and candidate gate recheck (#3)
* Stage 15: improve backtest entry density and candidate gate tuning

* CI PR Gate: use Windows PowerShell shell on self-hosted runner

* Fix CI checkout build: track core state store/journal sources

* CI PR Gate: track prime backtest dataset for operational gate

* Stage 15: backtest MTF/core-plane parity, realdata loop refinement, docs and cleanup

* Stage 15: migrate automation scripts to Python and checkpoint strategy updates

* Docs: switch runbooks to Python commands and keep legacy CLI aliases

* Fix Python auto-improvement loop argv compatibility

* Speed up candidate loop with two-stage tuning and constraint-first objective

* Refine strategy regime gates and entry thresholds

* Remove legacy PowerShell scripts after Python migration

* Stage15: strategy/verification tuning and diagnostics updates

* Chore: remove unused scripts and orphan analysis doc

* stage15: strict hostility trades-only thresholds wiring

* backtest: calibrate core execution slippage for profile parity

* ci: relax operational gate fallback dataset and artifact priming checks

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ config/*.json
 logs/
 *.log
 *.csv
+!data/backtest/simulation_large.csv
 # ===== IDE & 에디터 =====
 .vs/
 .vscode/settings.json
@@ -68,7 +69,7 @@ config/*secret*.json
 config/*private*.json
 
 # ===== Runtime State & Temp (Stage 12) =====
-state/
+/state/
 runtime/
 tmp/
 *.pid
